--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
     -->
     <title>Ahmed Hakim</title>
 <!-- Hotjar Tracking Code for portfolio.uipia.com -->
+<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
 <script>
   (function(h,o,t,j,a,r){
       h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
