--- a/public/index.html
+++ b/public/index.html
@@ -24,19 +24,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Ahmed Hakim</title>
-<!-- Hotjar Tracking Code for portfolio.uipia.com -->
-<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:1594339,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
