--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="I'm Ahmed Hakim a web developer in Alexandria.
+      I spend my days with my hands in many different areas of
+      development."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
