--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       I spend my days with my hands in many different areas of
       development."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/hakim192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/hakim192.jpg" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
